ヘッダーと記事の部分

--- a/gulp/src/template/_include/_l-head.ejs
+++ b/gulp/src/template/_include/_l-head.ejs
@@ -10,3 +10,18 @@
     <link rel="stylesheet" href="/css/common.min.css">
   </head>
   <body>
+    <nav class="l-header_nav">
+      <div class="l-header_title">
+        <h1>KASIODA</h1>
+      </div>
+      <div class="l-header_nav">
+        <ul class="l-header_wapper">
+          <li>TREND</li>
+          <li>BEAUTY</li>
+          <li>FASION</li>
+          <li>GOURMET</li>
+          <li>GUIDE</li>
+        </ul>
+      </div>
+    </nav>
+  </body>
