--- a/gulp/src/template/index.ejs
+++ b/gulp/src/template/index.ejs
@@ -1,3 +1,24 @@
 <% include _include/_l-head %>
-  <p class="tw">Facebook</p>
+    <div class="a-box">
+      <div class="a-contetnt">
+        <div class="a-infoBox">
+          <div class="a-tag">
+            <div class="a-tag-mouda a-tag-txt">mouda</div>
+            <div class="a-tag-category a-tag-txt">category</div>
+          </div>
+          <div class="a-info">
+            <span class="a-info-txt">Imvely（イムブリー）のイム・ジヒョンちゃんのインスタが可愛すぎる！！
+            </span>
+          </div>
+        </div>
+        <div class="a-img">
+          <img src="/img/rawpixel.jpg">
+          <div class="a-date">2018.10.05</div>
+          <div class="a-witerBox">
+            <span class="a-witerIcon"></span>
+            <span class="a-writerName">Micle Jr</span>
+          </div>
+        </div>
+      </div>
+    </div>
 <% include _include/_l-footer %>
